--- a/themes/TKL/layout/casper/head.ejs
+++ b/themes/TKL/layout/casper/head.ejs
@@ -55,8 +55,8 @@
     <![endif]-->
 
     <!-- jQuery | Load our jQuery, with an alternative source fallback to a local version if request is unavailable -->
-    <script src="<%- config.root %>js/jquery-1.11.1.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.11.1.min.js"><\/script>')</script>
+    <script src="https://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="https://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"><\/script>')</script>
 
     <!-- Load these in the <head> for quicker IE8+ load times -->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
