--- a/themes/TKL/layout/casper/after_all.ejs
+++ b/themes/TKL/layout/casper/after_all.ejs
@@ -15,7 +15,7 @@
         resizeHero();
     });
 </script>
-<script src="<%- config.root %>js/plugins.min.js"></script><!-- Bootstrap core and concatenated plugins always load here -->
+<script src="http://oj8njbmph.bkt.clouddn.com/plugins.min.js"></script><!-- Bootstrap core and concatenated plugins always load here -->
 <script src="<%- config.root %>js/jquery.flexslider-min.js"></script><!-- Flexslider plugin -->
 <script src="<%- config.root %>js/scripts.js"></script><!-- Theme scripts -->
 
